added social links

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
         <div class="social">
             <ul class="social_links">
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class="fab fa-facebook-f"></i></i></a></li>
-                <li><a href=""><i class="fab fa-linkedin-in"></i></i></a></li>
-                <li><a href=""><i class="fab fa-github"></i></i></a></li>
+                <li><a href="https://www.instagram.com/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/?hl=en" target="_blank"><i class="fab fa-facebook-f"></i></i></a></li>
+                <li><a href="https://www.linkedin.com/in/mustaeen-baig-b669a2216/" target="_blank"><i class="fab fa-linkedin-in"></i></i></a></li>
+                <li><a href="https://github.com/mustaeenbaig29" target="_blank"><i class="fab fa-github"></i></i></a></li>
             </ul>
         </div>
     </header>
@@ -102,14 +102,8 @@
               <input type="text" id="fname" name="firstname" placeholder="Your name..">
               <label for="lname">Last Name</label>
               <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-              <label for="country">Country</label>
-              <select id="country" name="country">
-                <option value="australia">Australia</option>
-                <option value="canada">Canada</option>
-                <option value="usa">USA</option>
-              </select>
-              <label for="subject">Subject</label>
-              <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+              <label for="message">Message</label>
+              <textarea id="message" name="subject" placeholder="Write something.." style="height:170px"></textarea>
               <input type="submit" value="Submit">
             </form>
           </div>
