--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="icon" href="images/b1d34a03063eb13673d746efaef6ca5f.jpg">
 </head>
 <body>
     <!-- navbar starts -->
@@ -120,7 +121,7 @@
                     </div>
 
                     <div class="card_anchor">
-                        <a href="">Click here</a>
+                        <a href="https://mustaeenbaig29.github.io/zomato/" target="_blank">Click here</a>
                     </div>
                 </div>
                 <div class="card">
@@ -144,9 +145,9 @@
             <h1>Have a project idea? <br/> Let's talk</h1>
 
             <div class="social">
-               <a href=""> <i class="fab fa-instagram"></i></a>
-               <a href="">  <i class="fab fa-facebook-f"></i></a>                 
-               <a href=""><i class="fab fa-github"></i></a>
+               <a href="https://www.instagram.com/" target="_blank"> <i class="fab fa-instagram"></i></a>
+               <a href="https://www.facebook.com/" target="_blank">  <i class="fab fa-facebook-f"></i></a>                 
+               <a href="https://github.com/mustaeenbaig29" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
         <!-- idea ends -->
